# Transport

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/jiahelogistic/: ApplicationTest.java  TestClass.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: HelloWorld.cpp  HelloWorld.h
app/src/main/java/com/jiahelogistic/: BasicActivity.java  JiaHeLogistic.java
app/src/main/java/com/jiahelogistic/activity/: AboutUsActivity.java  AppCompatPreferenceActivity.java  BasicAppCompatActivity.java  BasicPreferenceActivity.java  IntroAppActivity.java  LoginActivity.java  LoginAppCompatActivity.java  MainActivity.java  MainAppCompatActivity.java  SettingsActivity.java  SplashActivity.java  SplashAppCompatActivity.java
app/src/main/java/com/jiahelogistic/bean/: KeyValue.java  UpgradeBean.java
app/src/main/java/com/jiahelogistic/broadcast/: NetStateBroadcast.java
app/src/main/java/com/jiahelogistic/config/: Config.java  NetConfig.java  (+1 more)
app/src/main/res/anim/: anim_progress_bar.xml
app/src/main/res/drawable/: ic_home_black_18dp.xml  ic_person_black_18dp.xml  ic_person_black_24dp.xml  jh_splash_activity.xml  shape_dialog.xml
app/src/main/res/layout/: activity_about_us.xml  activity_common_header.xml  activity_intro.xml  activity_login.xml  activity_main.xml  activity_settings.xml  activity_splash.xml  common_dialog_layout.xml  dialog_normal.xml  fragment_main.xml  fragment_ucenter.xml  intro1.xml  intro2.xml  intro3.xml  intro4.xml  normal_preference.xml  schedule_progress_dialog.xml  tab_item.xml  waiting_progress_dialog.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: pref_data_sync.xml  pref_general.xml  pref_headers.xml  pref_notification.xml  preferences.xml
app/src/test/java/com/jiahelogistic/: ExampleUnitTest.java
(+34 files in other folders)
